# HEigs

./: Arpack.hs  HEigs.cabal  README.md
lib/Numeric/LinearAlgebra/: UnsymmetricEigen.hs  arpack.h
test/: test-unsymmetric.hs
